# LSys

./: .clang-format-ignore  .clang-tidy  Actions.cpp  Actions.h  CMakeLists.txt  CVSFileInfo.cpp  CommandLineOptions.cpp  CommandLineOptions.h  CompTest.btm  CompTests.btm  Consts.cpp  Consts.h  Debug.cpp  Debug.h  Expression.cpp  Expression.h  GenerateParser.btm  Generator.cpp  Generator.h  Generic.h  GenericGenerator.cpp  GenericGenerator.h  Interpret.cpp  Interpret.h  LSys.bpf  LSys.bpr  LSys.dev  LSys.dsk  LSys.layout  LSysMain.cpp  LSysModel.cpp  LSysModel.h  Lexer.cpp  List.cpp  List.h  MANIFEST  Makefile.win  Module.cpp  Module.h  Name.cpp  (+46 more)
Examples/: Flower1.ls  LParseTest.ls  LParseTest1.ls  LParseTest2.ls  LychnisCoronaria  alt_leaf_a  alt_leaf_b  alt_leaf_c  aono_tree_a  aono_tree_b  aono_tree_c  aono_tree_d  bourke_bush  bourke_pentaplexity  bourke_weed  bush_a  bush_b  bush_c  bush_d  bush_e  bush_f  compound_leaf  compound_leaf_a  compound_leaf_b  compound_leaf_c  compound_leaf_d  compound_leaf_e  cordate_leaf  dibotryoid_closed  dibotryoid_open  dragon  fass_curve_a  fass_curve_b  gosper_curve_a  gosper_curve_b  hilbert3d  hogeweg_plant_a  hogeweg_plant_b  hogeweg_plant_c  hogeweg_plant_d  (+33 more)
cmake/: Cache.cmake  CheckMinimumToolRequirements.cmake  CompilerWarnings.cmake  Doxygen.cmake  FindKodi.cmake  GetLSysSources.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
include/lsys/: actions.cppm  actions.h  consts.cppm  consts.h  debug.h  expression.cppm  expression.h  generator.cppm  generator.h  generic.h  generic_generator.cppm  generic_generator.h  graphics_generator.cppm  graphics_generator.h  interpret.cppm  interpret.h  l_sys_model.cppm  l_sys_model.h  list.cppm  list.h  module.cppm  module.h  name.cppm  name.h  parsed_model.cppm  parsed_model.h  parser.h  polygon.cppm  polygon.h  production.cppm  production.h  radiance_generator.cppm  radiance_generator.h  rand.cppm  rand.h  symbol_table.cppm  symbol_table.h  turtle.cppm  turtle.h  value.cppm  (+3 more)
main/: command_line_options.cpp  command_line_options.h  l_sys_main.cpp  options.cpp  options.h
src/: Actions.cpp  Actions.h  CommandLineOptions.cpp  CommandLineOptions.h  Consts.cpp  Consts.h  Expression.cpp  Expression.h  GenericGenerator.cpp  GenericGenerator.h  GraphicsGenerator.cpp  GraphicsGenerator.h  IGenerator.cpp  IGenerator.h  Interpret.cpp  Interpret.h  LSysMain.cpp  LSysModel.cpp  LSysModel.h  Lexer.cpp  List.h  Module.cpp  Module.h  Name.cpp  Name.h  Options.cpp  Parser.cpp  Parser.h  Polygon.h  Production.cpp  Production.h  RadianceGenerator.cpp  RadianceGenerator.h  Rand.h  SymbolTable.cpp  SymbolTable.h  Turtle.cpp  Turtle.h  Value.cpp  Value.h  (+55 more)
